media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr@sha256:540d2b65fdbaffc2e2c7939b35dcb8fb75facf4b2e4297b54037993ce28d4a19
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media/sonarr
        - name: data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media/data
