media/sonarr/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - sonarr.lan
      secretName: sonarr-tls
  rules:
    - host: sonarr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
